Banner alignment issue fixed

--- a/css/application.css
+++ b/css/application.css
@@ -2712,7 +2712,6 @@ footer {
     text-align: left;
     align-content: start;
     align-items: start;
-    width: 970px;
   }
   .banner-content h1 {
     font-size: 4rem;
