--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -80,7 +80,6 @@
             text-align: left;
             align-content: start;
             align-items: start;
-            width: 970px;
 
             h1 {
                 font-size: 4rem;
